--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "bennettswood-scouts-resource-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
+  "homepage": "",
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@testing-library/jest-dom": "^5.16.1",
