tidied file structure

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Bennettswood Scouts Resources",
   "icons": [
     {
-      "src": "favicon.jpg",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "bw-favicon.jpg",
+      "sizes": "16x16",
       "type": "image/x-icon"
     }
   ],
